app/onchain/check_output.txt
    Checking aid_escrow v0.1.0 (/Users/user/Desktop/projects/drips/Soter/app/onchain/contracts/aid_escrow)
error: cannot find derive macro `TryFromVal` in this scope
  --> contracts/aid_escrow/src/lib.rs:11:38
   |
11 | #[derive(Clone, Copy, PartialEq, Eq, TryFromVal, IntoVal)]
   |                                      ^^^^^^^^^^
   |
note: `TryFromVal` is imported here, but it is only a trait, without a derive macro
  --> contracts/aid_escrow/src/lib.rs:4:41
   |
 4 |     Address, Env, IntoVal, Map, Symbol, TryFromVal, Val, contract, contracterror, contractimpl,
   |                                         ^^^^^^^^^^

error: cannot find derive macro `IntoVal` in this scope
  --> contracts/aid_escrow/src/lib.rs:11:50
   |
11 | #[derive(Clone, Copy, PartialEq, Eq, TryFromVal, IntoVal)]
   |                                                  ^^^^^^^
   |
note: `IntoVal` is imported here, but it is only a trait, without a derive macro
  --> contracts/aid_escrow/src/lib.rs:4:19
   |
 4 |     Address, Env, IntoVal, Map, Symbol, TryFromVal, Val, contract, contracterror, contractimpl,
   |                   ^^^^^^^

error: cannot find derive macro `TryFromVal` in this scope
  --> contracts/aid_escrow/src/lib.rs:21:17
   |
21 | #[derive(Clone, TryFromVal, IntoVal)]
   |                 ^^^^^^^^^^
   |
note: `TryFromVal` is imported here, but it is only a trait, without a derive macro
  --> contracts/aid_escrow/src/lib.rs:4:41
   |
 4 |     Address, Env, IntoVal, Map, Symbol, TryFromVal, Val, contract, contracterror, contractimpl,
   |                                         ^^^^^^^^^^

error: cannot find derive macro `IntoVal` in this scope
  --> contracts/aid_escrow/src/lib.rs:21:29
   |
21 | #[derive(Clone, TryFromVal, IntoVal)]
   |                             ^^^^^^^
   |
note: `IntoVal` is imported here, but it is only a trait, without a derive macro
  --> contracts/aid_escrow/src/lib.rs:4:19
   |
 4 |     Address, Env, IntoVal, Map, Symbol, TryFromVal, Val, contract, contracterror, contractimpl,
   |                   ^^^^^^^

error[E0412]: cannot find type `String` in this scope
  --> contracts/aid_escrow/src/lib.rs:29:31
   |
29 |     pub metadata: Map<Symbol, String>,
   |                               ^^^^^^ not found in this scope
   |
help: consider importing this struct
   |
 3 + use soroban_sdk::String;
   |

warning: unused import: `Val`
 --> contracts/aid_escrow/src/lib.rs:4:53
  |
4 |     Address, Env, IntoVal, Map, Symbol, TryFromVal, Val, contract, contracterror, contractimpl,
  |                                                     ^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `soroban_sdk::Val: TryFromVal<Env, Package>` is not satisfied
   --> contracts/aid_escrow/src/lib.rs:115:63
    |
115 |             .set(&(Symbol::new(&env, "package"), package_id), &package);
    |              --- required by a bound introduced by this call  ^^^^^^^^ the trait `TryFromVal<Env, Package>` is not implemented for `soroban_sdk::Val`
    |
    = help: the following other types implement trait `TryFromVal<E, V>`:
              `soroban_sdk::Val` implements `TryFromVal<E, &()>`
              `soroban_sdk::Val` implements `TryFromVal<E, &(T0, T1)>`
              `soroban_sdk::Val` implements `TryFromVal<E, &(T0, T1, T2)>`
              `soroban_sdk::Val` implements `TryFromVal<E, &(T0, T1, T2, T3)>`
              `soroban_sdk::Val` implements `TryFromVal<E, &(T0, T1, T2, T3, T4)>`
              `soroban_sdk::Val` implements `TryFromVal<E, &(T0, T1, T2, T3, T4, T5)>`
              `soroban_sdk::Val` implements `TryFromVal<E, &(T0, T1, T2, T3, T4, T5, T6)>`
              `soroban_sdk::Val` implements `TryFromVal<E, &(T0, T1, T2, T3, T4, T5, T6, T7)>`
            and 176 others
    = note: required for `soroban_sdk::Val` to implement `FromVal<Env, Package>`
    = note: required for `Package` to implement `IntoVal<Env, soroban_sdk::Val>`
note: required by a bound in `soroban_sdk::storage::Persistent::set`
   --> /Users/user/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/soroban-sdk-23.4.1/src/storage.rs:325:12
    |
322 |     pub fn set<K, V>(&self, key: &K, val: &V)
    |            --- required by a bound in this associated function
...
325 |         V: IntoVal<Env, Val>,
    |            ^^^^^^^^^^^^^^^^^ required by this bound in `Persistent::set`

error[E0277]: the trait bound `Package: TryFromVal<Env, soroban_sdk::Val>` is not satisfied
   --> contracts/aid_escrow/src/lib.rs:126:14
    |
126 |             .get(&(key, package_id))
    |              ^^^ unsatisfied trait bound
    |
help: the trait `TryFromVal<Env, soroban_sdk::Val>` is not implemented for `Package`
   --> contracts/aid_escrow/src/lib.rs:22:1
    |
 22 | pub struct Package {
    | ^^^^^^^^^^^^^^^^^^
    = help: the following other types implement trait `TryFromVal<E, V>`:
              `()` implements `TryFromVal<E, [soroban_sdk::Val; 0]>`
              `()` implements `TryFromVal<E, soroban_sdk::Val>`
              `()` implements `TryFromVal<Env, ()>`
              `(T0, T1)` implements `TryFromVal<E, [soroban_sdk::Val; N]>`
              `(T0, T1)` implements `TryFromVal<E, soroban_sdk::Val>`
              `(T0, T1, T2)` implements `TryFromVal<E, [soroban_sdk::Val; N]>`
              `(T0, T1, T2)` implements `TryFromVal<E, soroban_sdk::Val>`
              `(T0, T1, T2, T3)` implements `TryFromVal<E, [soroban_sdk::Val; N]>`
            and 363 others
note: required by a bound in `soroban_sdk::storage::Persistent::get`
   --> /Users/user/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/soroban-sdk-23.4.1/src/storage.rs:317:12
    |
313 |     pub fn get<K, V>(&self, key: &K) -> Option<V>
    |            --- required by a bound in this associated function
...
317 |         V: TryFromVal<Env, Val>,
    |            ^^^^^^^^^^^^^^^^^^^^ required by this bound in `Persistent::get`

error[E0277]: the trait bound `soroban_sdk::Val: TryFromVal<Env, Package>` is not satisfied
   --> contracts/aid_escrow/src/lib.rs:135:64
    |
135 |             env.storage().persistent().set(&(key, package_id), &package);
    |                                        ---                     ^^^^^^^^ the trait `TryFromVal<Env, Package>` is not implemented for `soroban_sdk::Val`
    |                                        |
    |                                        required by a bound introduced by this call
    |
    = help: the following other types implement trait `TryFromVal<E, V>`:
              `soroban_sdk::Val` implements `TryFromVal<E, &()>`
              `soroban_sdk::Val` implements `TryFromVal<E, &(T0, T1)>`
              `soroban_sdk::Val` implements `TryFromVal<E, &(T0, T1, T2)>`
              `soroban_sdk::Val` implements `TryFromVal<E, &(T0, T1, T2, T3)>`
              `soroban_sdk::Val` implements `TryFromVal<E, &(T0, T1, T2, T3, T4)>`
              `soroban_sdk::Val` implements `TryFromVal<E, &(T0, T1, T2, T3, T4, T5)>`
              `soroban_sdk::Val` implements `TryFromVal<E, &(T0, T1, T2, T3, T4, T5, T6)>`
              `soroban_sdk::Val` implements `TryFromVal<E, &(T0, T1, T2, T3, T4, T5, T6, T7)>`
            and 176 others
    = note: required for `soroban_sdk::Val` to implement `FromVal<Env, Package>`
    = note: required for `Package` to implement `IntoVal<Env, soroban_sdk::Val>`
note: required by a bound in `soroban_sdk::storage::Persistent::set`
   --> /Users/user/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/soroban-sdk-23.4.1/src/storage.rs:325:12
    |
322 |     pub fn set<K, V>(&self, key: &K, val: &V)
    |            --- required by a bound in this associated function
...
325 |         V: IntoVal<Env, Val>,
    |            ^^^^^^^^^^^^^^^^^ required by this bound in `Persistent::set`

error[E0277]: the trait bound `soroban_sdk::Val: TryFromVal<Env, Package>` is not satisfied
   --> contracts/aid_escrow/src/lib.rs:143:60
    |
143 |         env.storage().persistent().set(&(key, package_id), &package);
    |                                    ---                     ^^^^^^^^ the trait `TryFromVal<Env, Package>` is not implemented for `soroban_sdk::Val`
    |                                    |
    |                                    required by a bound introduced by this call
    |
    = help: the following other types implement trait `TryFromVal<E, V>`:
              `soroban_sdk::Val` implements `TryFromVal<E, &()>`
              `soroban_sdk::Val` implements `TryFromVal<E, &(T0, T1)>`
              `soroban_sdk::Val` implements `TryFromVal<E, &(T0, T1, T2)>`
              `soroban_sdk::Val` implements `TryFromVal<E, &(T0, T1, T2, T3)>`
              `soroban_sdk::Val` implements `TryFromVal<E, &(T0, T1, T2, T3, T4)>`
              `soroban_sdk::Val` implements `TryFromVal<E, &(T0, T1, T2, T3, T4, T5)>`
              `soroban_sdk::Val` implements `TryFromVal<E, &(T0, T1, T2, T3, T4, T5, T6)>`
              `soroban_sdk::Val` implements `TryFromVal<E, &(T0, T1, T2, T3, T4, T5, T6, T7)>`
            and 176 others
    = note: required for `soroban_sdk::Val` to implement `FromVal<Env, Package>`
    = note: required for `Package` to implement `IntoVal<Env, soroban_sdk::Val>`
note: required by a bound in `soroban_sdk::storage::Persistent::set`
   --> /Users/user/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/soroban-sdk-23.4.1/src/storage.rs:325:12
    |
322 |     pub fn set<K, V>(&self, key: &K, val: &V)
    |            --- required by a bound in this associated function
...
325 |         V: IntoVal<Env, Val>,
    |            ^^^^^^^^^^^^^^^^^ required by this bound in `Persistent::set`

Some errors have detailed explanations: E0277, E0412.
For more information about an error, try `rustc --explain E0277`.
warning: `aid_escrow` (lib) generated 1 warning
error: could not compile `aid_escrow` (lib) due to 9 previous errors; 1 warning emitted
